# Computer-Graphics

./: README.md
Codes/: _GENERATE_VS2019_x64.bat
Codes/dep/glad/glad/: glad.h
Codes/src/: CMakeLists.txt
Codes/src/Animacion/: Animacion.cpp  CMakeLists.txt
Codes/src/Casa/: CMakeLists.txt
Codes/src/Circulo/: CMakeLists.txt  circulo.cpp
Codes/src/Control/: CMakeLists.txt  Control.cpp  Matriz.h  buildShaders.h
Codes/src/Control/Matrix/: Matrix.sln
Codes/src/Control/Matrix/Matrix/: Matrix.vcxproj
Codes/src/Estrella/: Estrella.cpp
Codes/src/Flor/: CMakeLists.txt  Flor.cpp
Codes/src/Parcial/: CMakeLists.txt  Matriz.h  Parcial.cpp
Codes/src/RGB/: CMakeLists.txt  RGB.cpp
Codes/src/Tarea 1/Casa/: Casa.cpp
Codes/src/Tarea 1/Estrella/: CMakeLists.txt  Estrella.cpp
Codes/src/Tutorial_01/: CMakeLists.txt  main.cpp
Codes/src/Tutorial_02/: CMakeLists.txt  main.cpp
Codes/src/Tutorial_Hello_Rec/: CMakeLists.txt  Tutorial_Hello_Rec.cpp
Codes/src/Tutorial_Hello_Triangle/: CMakeLists.txt
Codes/src/hw0/: CMakeLists.txt  shaders.cpp
src/Casa/: Casa.cpp
src/Tutorial_Hello_Triangle/: main.cpp
src/hw0/: geometry3.h  mytest3.cpp
